--- a/install/www/uwsgi.ini
+++ b/install/www/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 
-project         = greenery
+project         = potnanny
 uid             = www-data
 base            = /var/www
 
@@ -10,7 +10,7 @@ module          = wsgi:app
 master          = true
 processes       = 4
 
-socket          = /var/www/greenery.sock
+socket          = /var/www/potnanny.sock
 chown-socket    = %(uid):%(uid)
 chmod-socket    = 660
 max-requests    = 20
