doc updates, and config changes

--- a/uwsgi/potnanny.ini
+++ b/uwsgi/potnanny.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 
 # variables
-project         = potnanny
+project         = potnanny-api
 uid             = www-data
 base            = /var/www
 
