updated installer to generate secret keys in bash profile for production

--- a/uwsgi/potnanny.ini
+++ b/uwsgi/potnanny.ini
@@ -9,7 +9,7 @@ base            = /var/www
 chdir           = /var/www/%(project)
 plugins         = python3
 module          = wsgi:app
-master          = false
+# master          = false
 processes       = 5
 
 socket          = /run/%(project).sock
